# python-nfl-stats-scrape

./: .gitignore  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yaml
.github/worklfows/: ci.yaml
src/: matchup_loader.py  pull_matchup_data.sh  pull_schedule_data.sh  pull_stats_data.sh  schedule_loader.py  scrape.py  stats_loader.py
src/helpers/: box_score.py  boxscore.py  database.py  player.py  positions.py  schedule.py  team.py
src/output/: player.html
tests/: __init__.py
tests/helper_tests/: box_score_test.py  boxscore_test.py  player_test.py  postions_test.py  schedule_test.py  team_test.py
tests/test_files/: boxscore.html  boxscore.json  event.json  matchup-stats.json  matchup.json  player.html  schedule.html  schedule.json  team_statistic_codes.csv  teams.html
